--- a/public/assets/css/template.css
+++ b/public/assets/css/template.css
@@ -51,6 +51,7 @@ header.header .spacer{
 }
 header.header .dropdown{
     position: relative;
+    height: 64px;
 }
 header.header .dropdown-button{
   
@@ -71,7 +72,7 @@ header.header .dropdown-content{
     position: absolute;
     min-width: 100%;
     background-color: #f9f9f9;
-    padding: 5px 0px;
+    padding: 15px 0px;
     z-index: 100;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, .2);
 }
@@ -79,24 +80,75 @@ header.header .dropdown-content{
 header.header .dropdown-content ul{
     list-style: none;
     padding-left: 0;
+    margin-bottom: 0;
 }
 header.header .dropdown-content a{
     text-decoration: none;    
     color: #222;
+    display: flex;
+    align-items: center;
+    padding: 7px;
+    font-size: 1.1rem;
 }
 header.header .dropdown-content a:hover{
-    background-color: rgba(0, 0, 0, 0.3)
+    background-color: rgba(0, 0, 0, 0.1)
+}
+header.header .dropdown:hover{
+    background-color: rgba(0, 0, 0, .1)
 }
 
 aside.sidebar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: -5px 0px 25px 1px rgba(0, 0, 0, .4);
+    background-color: white;
     grid-area: sidebar;
+}
+aside.sidebar .menu{
+    width: 100%;
+    flex-grow: 1;
+
+}
+aside.sidebar .menu ul.nav-list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+aside.sidebar .menu li.nav-item{
+    margin: 0;
+    padding: 10px 0 10px 25px;
+}
+aside.sidebar .menu li.nav-item:hover{
+        background-color: rgba(0, 0, 0, 0.1);
+}
+aside.sidebar .menu li.nav-item a{
+    font-size: 1.2rem;
+    color: #555;
+    text-decoration: none;
+}
+aside.sidebar .icon{
+    font-size: 3.5rem;
+}
+
+aside.sidebar .info .main{
+    font-size: 2rem;
 }
 .hide-sidebar aside.sidebar{
     display: none;
 }
+
 main.content0{
     grid-area: content;
 }
 footer.footer{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 20px;
+    font-size: 1.2rem;
+    background-color: #222;
+    color: #fff;
+    
     grid-area: footer;
 }
