--- a/public/assets/css/template.css
+++ b/public/assets/css/template.css
@@ -127,20 +127,71 @@ aside.sidebar .menu li.nav-item a{
     color: #555;
     text-decoration: none;
 }
-aside.sidebar .icon{
-    font-size: 3.5rem;
+
+aside.sidebar .sidebar-widgets{
+    position: sticky;
+    bottom: 20px;
+}
+aside.sidebar .sidebar-widget{
+    display: flex;
+    align-items: center;
+}
+aside.sidebar .sidebar-widget .icon{
+    font-size: 2.5rem;
+    margin: 2px 10px 2px 0;
+}
+aside.sidebar .sidebar-widget .info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
 }
 
 aside.sidebar .info .main{
     font-size: 2rem;
 }
+.division{
+    width: 80%;
+    border: solid 1px #eee;
+}
 .hide-sidebar aside.sidebar{
     display: none;
 }
 
-main.content0{
+main.content{
+    background-color: #fff;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.2);
     grid-area: content;
 }
+
+main.content .content-title{
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 15px;
+}
+main.content .content-title .icon{
+    font-size: 3rem;
+}
+main.content .content-title h1{
+    color: #444;
+    font-size: 1.8rem;
+    font-weight: 300;
+    margin: 0;
+}
+main.content .content-title h2{
+    color: #888;
+    font-size: 1.2rem;
+    font-weight: 300;
+    margin: 0;
+}
+.record{
+    font-size: 2.2rem;
+}
+
 footer.footer{
     display: flex;
     align-items: center;
