--- a/public/assets/css/template.css
+++ b/public/assets/css/template.css
@@ -96,6 +96,11 @@ header.header .dropdown-content a:hover{
 header.header .dropdown:hover{
     background-color: rgba(0, 0, 0, .1)
 }
+header.header .avatar{
+    height: 75%;
+    border-radius: 50%;
+    margin-left: 10px;
+}
 
 aside.sidebar{
     display: flex;
