--- a/public/assets/css/template.css
+++ b/public/assets/css/template.css
@@ -201,10 +201,38 @@ footer.footer{
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding-right: 20px;
+   \course\php-7-completo\ padding-right: 20px;
     font-size: 1.2rem;
     background-color: #222;
     color: #fff;
     
     grid-area: footer;
+}
+
+.summary-boxes{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.summary-box{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    color: white;
+    border-radius: 10px;
+    margin: 0px 5px;
+    min-width: 200px;
+
+}
+.summary-box .icon{
+    font-size: 3.5rem;
+}
+
+.summary-box .title{
+    font-size: 1.5rem;
+}
+.summary-box .value{
+    font-size: 2rem;
 }
